Revision history for perl distribution Mojolicious-Plugin-Webpack

1.01 Not Released
 - Removed need for assets/asset_map.mode.json

1.00 2021-05-24T15:17:08+0900
 - Add Mojo::Alien::npm
 - Add Mojo::Alien::rollup
 - Add Mojo::Alien::webpack
 - Made Mojo::Alien::npm compatible with https://pnpm.io/
 - Improved dependency tracking in ./node_modules
 - Rewrote Plugin::Webpack using new Mojo::Alien:: modules
 - Updated examples to match "alien" modules
 - Fix being able to include images and other processed assets #7
 - Fix vulnerabilities reported by GitHub #12
 - Fix CI Ubuntu workflow

0.14 2020-12-21T09:42:41+0900
 - Fix route warnings issued by latest Mojolicious
 - Will install new node modules present in "dependencies"
 - Migrated to webpack 5
   Contributor: Daniel Mantovani

0.13 2020-09-07T10:10:24+0900
 - Fix "sass-loader" options #4
 - Removed support for "shim"
 - Improved documentation

0.12 2019-10-07T07:02:11+0900
 - Renamed every ".dev." file to ".development." #2

0.11 2019-10-05T22:12:07+0900
 - Will skip entries in generated HTML file that does not match current mode.

0.10 2019-10-02T15:35:43+0900
 - Add support for custom "npm" binary
 - Need to look in "devDependencies" as well to skip install of node module
 - Will only install modules once

0.09 2019-05-20T22:37:42+0200
 - Add support for rollup.js
 - Changed the EXPERIMENTAL statement

0.08 2019-04-04T22:34:48+0700
 - Fix annoying default for Cache-Control when developing

0.07 2019-04-04T22:19:40+0700
 - Add Cache-Control to response headers
 - Fix passing on arguments using the "webpack" command
 - Change webpack-md5-hash to the superior webpack-plugin-hash-output

0.06 2019-01-13T10:52:34+0900
 - Converted crushinator script to mojo webpack subcommand
   You need to manually remove `which crushinator` if already installed.

0.05 2018-12-27T13:21:34+0900
 - Use terser-webpack-plugin instead of uglifyjs-webpack-plugin

0.04 2018-12-26T13:53:46+0900
 - Fix typo in webpack.custom.js