@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-Webpack
 
 1.01 Not Released
  - Removed need for assets/asset_map.mode.json
+ - Add support for mojo webpack --build
 
 1.00 2021-05-24T15:17:08+0900
  - Add Mojo::Alien::npm
